css to fix spacing and layout

--- a/smartscheduler/src/App2.css
+++ b/smartscheduler/src/App2.css
@@ -1,3 +1,6 @@
+body {
+  /* text-align: center; */
+}
 h1 {
   color: blue;
 }
@@ -14,8 +17,12 @@ h3 {
   color: rgb(45, 103, 230);
 }
 button {
-  color: blue;
-  font-size: 10pt;
+  margin: 15px;
+  width: 100px;
+  background-color: rgb(55, 109, 45);
+  color: white;
+  font-weight: 700;
+  border-radius: 6px;
 }
 table {
   border-collapse: collapse;
@@ -61,11 +68,7 @@ form {
   min-width: 300px;
 }
 .submitBtn {
-  /* color: blue; */
-  /* font-weight: 40px; */
   margin: 15px;
-  /* padding: 5px; */
-  /* width: 100px; */
   width: 100px;
   background-color: rgb(55, 109, 45);
   color: white;
@@ -81,6 +84,11 @@ button {
   color: white;
   font-weight: 700;
   border-radius: 6px;
+}
+button:hover {
+  background-color: white;
+  color: #c6d166;
+  transform: scale(1.2);
 }
 .submitBtn:hover {
   background-color: white;
@@ -105,11 +113,19 @@ label {
   justify-content: center;
   margin: 20px;
 }
-.container-mainContent {
+.show {
+  width: 300px;
+}
+.group {
   display: flex;
   flex-direction: column;
+}
+.container-mainContent {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
   border: 1px solid lightgray;
-  margin: 0 15px;
+  margin-left: 100px;
 }
 .userImg {
   border-radius: 50%;
@@ -148,14 +164,24 @@ label {
 }
 .container-officeHours {
   border: 1px solid lightgray;
-  padding: 0 10px;
+  padding: 0 5px;
+  margin-left: 12px;
   font-size: 10pt;
   height: 400px;
-  width: 265px;
+  width: 240px;
+  z-index: 1;
+  position: absolute;
+  top: 90px;
 }
 .office-map {
   margin-top: 40px;
   border: 1px solid lightgray;
   padding: 10px;
   width: 90%;
+}
+.NavBtns {
+  z-index: 1;
+  text-align: right;
+  margin-top: -61px;
+  margin-right: 5px;
 }
